// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BranchNavigator matches snapshot 1`] = `
<div>
  <div
    aria-label="Branch navigation"
    class="inline-flex items-center gap-0.5 text-silver/70"
    role="navigation"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-git-branch w-3 h-3 mr-0.5 text-silver/50"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <line
        x1="6"
        x2="6"
        y1="3"
        y2="15"
      />
      <circle
        cx="18"
        cy="6"
        r="3"
      />
      <circle
        cx="6"
        cy="18"
        r="3"
      />
      <path
        d="M18 9a9 9 0 0 1-9 9"
      />
    </svg>
    <button
      aria-label="Previous branch"
      class="p-0.5 hover:text-white hover:bg-white/10 transition-colors disabled:opacity-30 disabled:cursor-not-allowed disabled:hover:bg-transparent disabled:hover:text-silver/70"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-left w-3 h-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m15 18-6-6 6-6"
        />
      </svg>
    </button>
    <span
      class="text-xs tabular-nums min-w-6 text-center"
    >
      2
      /
      4
    </span>
    <button
      aria-label="Next branch"
      class="p-0.5 hover:text-white hover:bg-white/10 transition-colors disabled:opacity-30 disabled:cursor-not-allowed disabled:hover:bg-transparent disabled:hover:text-silver/70"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-right w-3 h-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`BranchNavigator matches snapshot when on first branch 1`] = `
<div>
  <div
    aria-label="Branch navigation"
    class="inline-flex items-center gap-0.5 text-silver/70"
    role="navigation"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-git-branch w-3 h-3 mr-0.5 text-silver/50"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <line
        x1="6"
        x2="6"
        y1="3"
        y2="15"
      />
      <circle
        cx="18"
        cy="6"
        r="3"
      />
      <circle
        cx="6"
        cy="18"
        r="3"
      />
      <path
        d="M18 9a9 9 0 0 1-9 9"
      />
    </svg>
    <button
      aria-label="Previous branch"
      class="p-0.5 hover:text-white hover:bg-white/10 transition-colors disabled:opacity-30 disabled:cursor-not-allowed disabled:hover:bg-transparent disabled:hover:text-silver/70"
      disabled=""
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-left w-3 h-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m15 18-6-6 6-6"
        />
      </svg>
    </button>
    <span
      class="text-xs tabular-nums min-w-6 text-center"
    >
      1
      /
      3
    </span>
    <button
      aria-label="Next branch"
      class="p-0.5 hover:text-white hover:bg-white/10 transition-colors disabled:opacity-30 disabled:cursor-not-allowed disabled:hover:bg-transparent disabled:hover:text-silver/70"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-right w-3 h-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`BranchNavigator matches snapshot when on last branch 1`] = `
<div>
  <div
    aria-label="Branch navigation"
    class="inline-flex items-center gap-0.5 text-silver/70"
    role="navigation"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-git-branch w-3 h-3 mr-0.5 text-silver/50"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <line
        x1="6"
        x2="6"
        y1="3"
        y2="15"
      />
      <circle
        cx="18"
        cy="6"
        r="3"
      />
      <circle
        cx="6"
        cy="18"
        r="3"
      />
      <path
        d="M18 9a9 9 0 0 1-9 9"
      />
    </svg>
    <button
      aria-label="Previous branch"
      class="p-0.5 hover:text-white hover:bg-white/10 transition-colors disabled:opacity-30 disabled:cursor-not-allowed disabled:hover:bg-transparent disabled:hover:text-silver/70"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-left w-3 h-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m15 18-6-6 6-6"
        />
      </svg>
    </button>
    <span
      class="text-xs tabular-nums min-w-6 text-center"
    >
      3
      /
      3
    </span>
    <button
      aria-label="Next branch"
      class="p-0.5 hover:text-white hover:bg-white/10 transition-colors disabled:opacity-30 disabled:cursor-not-allowed disabled:hover:bg-transparent disabled:hover:text-silver/70"
      disabled=""
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-right w-3 h-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m9 18 6-6-6-6"
        />
      </svg>
    </button>
  </div>
</div>
`;
